--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -69,7 +69,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All copyright reserved.</p>
     </footer>
 </body>
 </html>
