--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -39,7 +39,7 @@
     <main>
         <section>
             <h2>Contact Information</h2>
-            <p>Email us at: <a href="mailto:info@techcon2024.com">info@techcon2024.com</a></p>
+            <p>Email us at: <a href="mailto:email@example.com">email@example.com</a></p>
 
             <p>Follow us on social media:</p>
             <ul>
